force-app/main/default/objects/Contact/fields/Accessory90__c.field-meta.xml
<CustomField>
    <fullName>Accessory90__c</fullName>
    <label>최근 90일 주변기기 구매 금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>