force-app/main/default/objects/Contact/fields/First_Purchase__c.field-meta.xml
<CustomField>
    <fullName>First_Purchase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>첫 구매로 이어진 지점</description>
    <label>인입지점</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>고객</relationshipLabel>
    <relationshipName>Contact_Account_First</relationshipName>
    <type>Lookup</type>
</CustomField>