force-app/main/default/objects/Contact/fields/Laptop90__c.field-meta.xml
<CustomField>
    <fullName>Laptop90__c</fullName>
    <description>90일 동안 구매한 노트북 구매금액의 총합입니다.</description>
    <label>최근 90일 노트북 구매 금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>