force-app/main/default/objects/Contact/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>고객 등급</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
                <default>true</default>
                <label>D</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>