force-app/main/default/objects/Contact/fields/recent_90Days__c.field-meta.xml
<CustomField>
    <fullName>recent_90Days__c</fullName>
    <label>최근 90일 구매 금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>