force-app/main/default/objects/Contact/recordTypes/buyContactRecordType.recordType-meta.xml
<RecordType>
    <fullName>buyContactRecordType</fullName>
    <active>true</active>
    <description>구매 고객 페이지입니다.</description>
    <label>구매 고객</label>
</RecordType>