force-app/main/default/objects/Contact/recordTypes/contactRecordType.recordType-meta.xml
<RecordType>
    <fullName>contactRecordType</fullName>
    <active>true</active>
    <description>상담고객 페이지입니다.</description>
    <label>상담 고객</label>
</RecordType>